# aoc

./: .gitignore
2015/: init.sh
2015/day1/aoc2015-d1-python/: Makefile  pyproject.toml
2015/day1/aoc2015-d1-python/tests/: test_day1.py
2019/: init.sh
2019/day1/aoc2019-d1-ruby/lib/: calculator.rb
2019/day1/aoc2019-d1-rust/: Makefile
2019/day2/: Makefile
2019/day2/aoc2019-d2-python/: Makefile  pyproject.toml
2019/day2/aoc2019-d2-python/src/aoc2019_d2_python/: day2.py
2019/day2/aoc2019-d2-python/tests/: test_day2.py
2019/day2/aoc2019-d2-ruby/: Makefile
2019/day2/aoc2019-d2-ruby/test/: test_intcoder.rb
2019/day4/aoc2019-d4-ruby/: Makefile
2019/day5/aoc2019-d5-python/: Makefile  pyproject.toml
2019/day5/aoc2019-d5-python/tests/: test_day5.py
2019/day5/aoc2019-d5-ruby/test/: test_intcoder.rb
2019/day7/aoc2019-d7-ruby/src/: intcoder.rb
2019/day8/aoc2019-d8-ruby/: Makefile
2019/day8/aoc2019-d8-ruby/test/: test_image.rb
2019/day9/aoc2019-d9-ruby/test/: test_intcoder.rb
2020/day1/aoc2020-d1-haskell/: CHANGELOG.md  Makefile  aoc2020-d1-haskell.cabal
2020/day1/aoc2020-d1-haskell/src/: Main.hs  MyLib.hs
2020/day1/aoc2020-d1-haskell/tests/: MyLibTest.hs
2021/day1/aoc2021-d1-rust/: Cargo.toml
2022/: init.sh
2022/day1/aoc2022-d1-python/: Makefile  pyproject.toml
2022/day1/aoc2022-d1-python/src/aoc2022_d1_python/: day1.py
2022/day1/aoc2022-d1-python/tests/: test_aoc2022_d1_python.py
2022/day2/aoc2022-d2-python/: Makefile  pyproject.toml
2022/day2/aoc2022-d2-python/src/aoc2022_d2_python/: day2.py
2022/day2/aoc2022-d2-python/tests/: test_aoc2022_d2_python.py
2022/day3/aoc2022-d3-python/: Makefile  pyproject.toml
2022/day3/aoc2022-d3-python/src/aoc2022_d3_python/: day3.py
2022/day3/aoc2022-d3-python/tests/: test_day3.py
2022/day4/aoc2022-d4-python/: Makefile  pyproject.toml
2022/day4/aoc2022-d4-python/tests/: test_day4.py
2022/day5/aoc2022-d5-python/: Makefile  pyproject.toml
2022/day5/aoc2022-d5-python/tests/: test_day5.py
2022/day6/aoc2022-d6-python/: Makefile  pyproject.toml
2022/day6/aoc2022-d6-python/tests/: test_day6.py
2022/day7/aoc2022-d7-python/: Makefile  pyproject.toml
2022/day7/aoc2022-d7-python/tests/: test_day7.py
2022/day8/aoc2022-d8-python/: Makefile  pyproject.toml
2022/day8/aoc2022-d8-python/src/aoc2022_d8_python/: day8.py
2022/day8/aoc2022-d8-python/tests/: test_day8.py
2022/day9/aoc2022-d9-python/: Makefile  pyproject.toml
2022/day9/aoc2022-d9-python/tests/: test_day9.py
2024/: init.sh
2024/day1/aoc2024-d1-python/: Makefile  pyproject.toml
2024/day1/aoc2024-d1-python/src/aoc2024_d1_python/: __init__.py  day1.py
2024/day1/aoc2024-d1-python/tests/: test_day1.py
2024/day10/aoc2024-d10-python/: Makefile  pyproject.toml
2024/day10/aoc2024-d10-python/tests/: test_day10.py
2024/day11/aoc2024-d11-python/: Makefile  pyproject.toml
2024/day11/aoc2024-d11-python/tests/: test_day11.py
2024/day12/aoc2024-d12-python/: Makefile  pyproject.toml
2024/day12/aoc2024-d12-python/src/aoc2024_d12_python/: __init__.py  day12.py
2024/day12/aoc2024-d12-python/tests/: test_day12.py
2024/day13/aoc2024-d13-python/: Makefile  pyproject.toml
2024/day13/aoc2024-d13-python/src/aoc2024_d13_python/: __init__.py  day13.py
2024/day13/aoc2024-d13-python/tests/: test_day13.py
2024/day14/aoc2024-d14-python/: Makefile  pyproject.toml
2024/day15/aoc2024-d15-python/: Makefile  pyproject.toml
2024/day16/aoc2024-d16-python/: Makefile  foo.py  pyproject.toml
2024/day17/aoc2024-d17-python/: Makefile  pyproject.toml
2024/day18/aoc2024-d18-python/: Makefile  pyproject.toml
2024/day19/aoc2024-d19-python/: Makefile  pyproject.toml
2024/day19/aoc2024-d19-python/src/aoc2024_d19_python/: __init__.py  day19.py
2024/day19/aoc2024-d19-python/tests/: test_day19.py
2024/day2/aoc2024-d2-python/: Makefile  pyproject.toml
2024/day2/aoc2024-d2-python/src/aoc2024_d2_python/: __init__.py  day2.py
2024/day2/aoc2024-d2-python/tests/: test_day2.py
2024/day20/aoc2024-d20-python/: Makefile  pyproject.toml
2024/day21/aoc2024-d21-python/: Makefile  pyproject.toml
2024/day22/aoc2024-d22-python/: Makefile  pyproject.toml
2024/day23/aoc2024-d23-python/: Makefile  pyproject.toml
2024/day24/aoc2024-d24-python/: Makefile  pyproject.toml
2024/day3/aoc2024-d3-python/: Makefile  pyproject.toml
2024/day4/aoc2024-d4-python/: Makefile  pyproject.toml
2024/day5/aoc2024-d5-python/: Makefile  pyproject.toml
2024/day6/aoc2024-d6-python/: Makefile  pyproject.toml
2024/day7/aoc2024-d7-python/: Makefile  pyproject.toml
2024/day8/aoc2024-d8-python/: Makefile  pyproject.toml
2024/day9/aoc2024-d9-python/: Makefile  pyproject.toml
2024/day9/aoc2024-d9-python/src/aoc2024_d9_python/: __init__.py  day9.py  day9b.py
2024/day9/aoc2024-d9-python/tests/: test_day9.py  test_day9b.py
day1/aoc2019-d1-ruby/: Makefile
day1/aoc2019-d1-ruby/test/: test_calculator.rb
day1/aoc2019-d1-rust/: Cargo.toml
day1/aoc2019-d1-rust/src/: lib.rs  main.rs
day1/aoc2019-d1-rust/tests/: calculator_test.rs
day10/aoc2019-d10-ruby/: Gemfile  Makefile
day10/aoc2019-d10-ruby/src/: main.rb  station.rb
day10/aoc2019-d10-ruby/test/: test_station.rb
day2/aoc2019-d2-ruby/: Makefile
day2/aoc2019-d2-ruby/lib/: intcoder.rb
day2/aoc2019-d2-ruby/test/: test_intcoder.rb
day3/aoc2019-d3-ruby/: Makefile
day3/aoc2019-d3-ruby/src/: main.rb  wiring.rb
day3/aoc2019-d3-ruby/test/: test_calculator.rb
day4/aoc2019-d4-ruby/src/: main.rb  password.rb
day4/aoc2019-d4-ruby/test/: test_password.rb
day5/aoc2019-d5-ruby/: Makefile
day5/aoc2019-d5-ruby/src/: intcoder.rb  main.rb
day5/aoc2019-d5-ruby/test/: test_intcoder.rb
day6/aoc2019-d6-ruby/: Makefile
day6/aoc2019-d6-ruby/src/: counter.rb  main.rb
day6/aoc2019-d6-ruby/test/: test_counter.rb
day7/aoc2019-d7-ruby/src/: intcoder.rb  main.rb
day7/aoc2019-d7-ruby/test/: test_intcoder.rb
day8/aoc2019-d8-ruby/src/: image.rb  main.rb
day8/aoc2019-d8-ruby/test/: test_image.rb
day9/aoc2019-d9-ruby/src/: intcoder.rb  main.rb
day9/aoc2019-d9-ruby/test/: test_intcoder.rb
(+66 files in other folders)
