[project]
name = "aoc2019-d2-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "funcparserlib>=1.0.1",
]

[project.scripts]
aoc2019-d2-python = "aoc2019_d2_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
