[project]
name = "aoc2024-d1-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.14.0",
]

[project.scripts]
aoc2024-d1-python = "aoc2024_d1_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
