[project]
name = "aoc2024-d9-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.10"
dependencies = [
    "toolz>=1.0.0",
]

[project.scripts]
aoc2024-d9-python = "aoc2024_d9_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
